--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "grommet": "^2.7.1",
-    "grommet-icons": "^4.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "styled-components": "^4.3.1"
+    "rsuite": "^3.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
