--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.19.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "rsuite": "^3.8.6"
+    "reactjs-popup": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
