--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://marisolcastrolopez.github.io/",
   "dependencies": {
     "antd": "^3.19.8",
+    "gh-pages": "^2.0.1",
     "gsap": "^2.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -13,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
