Rename components. Folders ordered

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://marisolcastrolopez.github.io/",
+  "homepage": "https://marisolcastrolopez.github.io/",
   "dependencies": {
     "antd": "^3.19.8",
     "gh-pages": "^2.0.1",
@@ -11,6 +11,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-spring": "^8.0.27",
     "reactjs-popup": "^1.4.1"
   },
   "scripts": {
